--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "log4js-logstash-tcp",
-  "version": "2.0.3",
-  "author": "Aigent B.V.",
+  "name": "@tele2se/log4js-logstash-tcp",
+  "version": "0.0.1",
+  "author": "Tele2 Sermo",
   "description": "This is a copy of the logstashUDP appender but instead sending via UDP send via TCP to avoid the maximum 64k bytes message size with the logstashUDP appender.",
   "keywords": [
     "logstash",
@@ -17,12 +17,12 @@
   "licenses": [
     {
       "type": "GNUv2",
-      "url": "https://github.com/Aigent/log4js-logstashTCP/blob/master/LICENSE"
+      "url": "https://github.com/ComHem/log4js-logstash-tcp/blob/master/LICENSE"
     }
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/Aigent/log4js-logstash-tcp.git"
+    "url": "https://github.com/ComHem/log4js-logstash-tcp.git"
   },
   "devDependencies": {
     "@types/jest": "^27.0.2",
@@ -34,7 +34,7 @@
     "test": "jest"
   },
   "engines": {
-    "node": "0.10.x"
+    "node": "14"
   },
   "main": "./index.js"
 }
