--- a/package.json
+++ b/package.json
@@ -1,38 +1,46 @@
 {
-    "name": "log4js-logstash-tcp",
-    "version": "2.0.3",
-    "author": "Aigent B.V.",
-    "description": "This is a copy of the logstashUDP appender but instead sending via UDP send via TCP to avoid the maximum 64k bytes message size with the logstashUDP appender.",
-    "keywords": [
-        "logstash",
-        "log4js",
-        "appender"
-    ],
-    "contributors": [
-        {
-            "name": "Sebastian Lagemann",
-            "email": "sebastian@aigent.com"
-        }
-    ],
-    "licenses": [
-        {
-            "type": "GNUv2",
-            "url": "https://github.com/Aigent/log4js-logstashTCP/blob/master/LICENSE"
-        }
-    ],
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/Aigent/log4js-logstash-tcp.git"
+  "name": "@tele2se/log4js-logstash-tcp",
+  "version": "0.0.1",
+  "author": "Tele2 Sermo",
+  "description": "log4js logstash TCP appender.",
+  "keywords": [
+    "logstash",
+    "log4js",
+    "appender"
+  ],
+  "contributors": [
+    {
+      "name": "Sebastian Lagemann",
+      "email": "sebastian@aigent.com"
     },
-    "devDependencies": {
-        "log4js": "^2.4.1",
-        "nodeunit": "^0.11.2"
-    },
-    "scripts": {
-        "test": "nodeunit tests"
-    },
-    "engines": {
-        "node": "0.10.x"
-    },
-    "main": "./index.js"
+    {
+      "name": "lenkan"
+    }
+  ],
+  "licenses": [
+    {
+      "type": "GNUv2",
+      "url": "https://github.com/ComHem/log4js-logstash-tcp/blob/master/LICENSE"
+    }
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ComHem/log4js-logstash-tcp.git"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.0.2",
+    "async-retry": "^1.3.3",
+    "jest": "^27.3.1",
+    "log4js": "^6.3.0"
+  },
+  "peerDependencies": {
+    "log4js": "^6.0.0"
+  },
+  "scripts": {
+    "test": "jest"
+  },
+  "engines": {
+    "node": "14"
+  },
+  "main": "./index.js"
 }
